--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -475,7 +475,7 @@
     position: absolute;
     z-index: -1;
     right: -6rem;
-    bottom: 7rem;
+    bottom: 6rem;
     width: 100%;
     max-width: 404px;
 
